[package]
name = "rsrs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"

[target.'cfg(unix)'.dependencies]
pnet = "0.34"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
] }
winapi = { version = "0.3", features = ["winsock2", "ws2ipdef", "ws2tcpip"] }
